// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LinearGenomeView /> renders one track, one region 1`] = `
<div>
  <div
    class="makeStyles-scaleBar"
  >
    <div
      class="MuiPaper-root makeStyles-scaleBarContig MuiPaper-outlined MuiPaper-rounded"
      style="min-width: 800px;"
    >
      <p
        class="MuiTypography-root makeStyles-scaleBarRefName MuiTypography-body1"
      >
        ctgA
      </p>
      <div
        class="makeStyles-scaleBarVisibleRegion"
        style="width: 8000px; left: -1px;"
      />
      <div
        class="makeStyles-scaleBarLabel"
        style="left: 400px;"
      >
        5
      </div>
      <div
        class="makeStyles-scaleBarLabel"
        style="left: 800px;"
      >
        10
      </div>
    </div>
  </div>
  <div
    class="makeStyles-overview"
  >
    <svg
      class="makeStyles-overviewSvg"
      height="48"
      width="100%"
    >
      <polygon
        fill="rgba(121, 134, 203, 0.3)"
        points="0,48,100,48,8001,0,1,0"
        stroke="rgba(121, 134, 203, 0.8)"
      />
    </svg>
    <div
      class="makeStyles-headerBar"
    >
      <button
        class="MuiButtonBase-root MuiToggleButton-root makeStyles-toggleButton"
        color="secondary"
        tabindex="0"
        title="select tracks"
        type="button"
        value="track_select"
      >
        <span
          class="MuiToggleButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            line_style
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="makeStyles-spacer"
      />
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-panButton MuiButton-outlinedSizeSmall MuiButton-sizeSmall"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root"
          >
            arrow_back
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-panButton MuiButton-outlinedSizeSmall MuiButton-sizeSmall"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root"
          >
            arrow_forward
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        aria-expanded="false"
        class="MuiAutocomplete-root MuiAutocomplete-hasPopupIcon"
        role="combobox"
      >
        <div
          class="MuiFormControl-root MuiTextField-root makeStyles-headerRefName MuiFormControl-marginDense MuiFormControl-fullWidth"
        >
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiAutocomplete-inputRoot MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd MuiInputBase-marginDense MuiOutlinedInput-marginDense"
            style="padding-top: 2px; padding-bottom: 2px; background: rgba(255, 255, 255, 0.8);"
          >
            <input
              aria-autocomplete="list"
              aria-invalid="false"
              autocapitalize="none"
              autocomplete="off"
              class="MuiInputBase-input MuiOutlinedInput-input MuiAutocomplete-input MuiAutocomplete-inputFocused MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense"
              id="refNameAutocomplete-lgv"
              spellcheck="false"
              type="text"
              value="ctgA"
            />
            <div
              class="MuiAutocomplete-endAdornment"
            >
              <button
                aria-label="Open"
                class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-popupIndicator"
                tabindex="-1"
                title="Open"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend"
                style="width: 0.01px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <form>
        <div
          class="MuiFormControl-root MuiTextField-root makeStyles-input MuiFormControl-marginDense"
        >
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-marginDense MuiOutlinedInput-marginDense"
            style="background: rgba(255, 255, 255, 0.8); height: 32px;"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
            >
              search
            </span>
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense"
              style="padding: 8px;"
              type="text"
              value="ctgA:1..100"
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend"
                style="width: 0.01px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </form>
      <div
        class="makeStyles-bp"
      >
        <p
          class="MuiTypography-root makeStyles-bp MuiTypography-body2 MuiTypography-colorTextSecondary"
        >
          100 bp
        </p>
      </div>
      <div
        class="makeStyles-container"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary MuiIconButton-disabled MuiButtonBase-disabled"
          data-testid="zoom_out"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
            >
              zoom_out
            </span>
          </span>
        </button>
        <span
          class="MuiSlider-root MuiSlider-colorPrimary makeStyles-slider"
        >
          <span
            class="MuiSlider-rail"
          />
          <span
            class="MuiSlider-track"
            style="left: 0%; width: 0%;"
          />
          <input
            type="hidden"
            value="3.321928094887362"
          />
          <span
            class="MuiSlider-mark MuiSlider-markActive"
            data-index="0"
            style="left: 0%;"
          />
          <span
            class="MuiSlider-mark"
            data-index="1"
            style="left: 43.06765580733933%;"
          />
          <span
            class="MuiSlider-mark"
            data-index="2"
            style="left: 100%;"
          />
          <span
            aria-orientation="horizontal"
            aria-valuemax="5.643856189774724"
            aria-valuemin="3.321928094887362"
            aria-valuenow="3.321928094887362"
            class="MuiSlider-thumb MuiSlider-thumbColorPrimary"
            data-index="0"
            role="slider"
            style="left: 0%;"
            tabindex="0"
          />
        </span>
        <button
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
          data-testid="zoom_in"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
            >
              zoom_in
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="makeStyles-spacer"
      />
    </div>
  </div>
  <div
    class="makeStyles-tracksContainer"
    role="presentation"
  >
    <div
      class="makeStyles-verticalGuidesZoomContainer"
      style="transform: scaleX(1);"
    >
      <div
        class="makeStyles-verticalGuidesContainer"
        style="left: -800px; width: 1700px;"
      >
        <div
          class="makeStyles-boundaryPaddingBlock"
          style="width: 800px;"
        />
        <div
          class="makeStyles-block"
          style="width: 100px;"
        >
          <div
            class="makeStyles-tick makeStyles-majorTick"
            style="left: -1px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 19px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 39px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 59px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 79px;"
          />
          <div
            class="makeStyles-tick makeStyles-majorTick"
            style="left: 99px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 119px;"
          />
        </div>
        <div
          class="makeStyles-boundaryPaddingBlock"
          style="width: 800px;"
        />
      </div>
    </div>
    <div
      class="makeStyles-rubberBand"
      style="left: 0px; width: 0px;"
    >
      <h6
        class="MuiTypography-root makeStyles-rubberBandText MuiTypography-h6"
      >
        0
         bp
         
      </h6>
    </div>
    <div
      class="makeStyles-guide"
      style="left: 0px;"
      title="1"
    />
    <div
      class="MuiPaper-root makeStyles-scaleBarContainer makeStyles-rubberBandControl MuiPaper-outlined MuiPaper-rounded"
      data-testid="rubberBand_controls"
      role="presentation"
      style="height: 17px; box-sizing: border-box;"
    >
      <div
        style="transform: scaleX(1);"
      >
        <div
          class="makeStyles-scaleBar"
          style="left: -801px; width: 1700px; height: 17px; box-sizing: border-box;"
        >
          <div
            class="makeStyles-boundaryPaddingBlock"
            style="background: none; width: 800px;"
          />
          <div
            class="makeStyles-block"
            style="width: 100px;"
          >
            <div
              class="makeStyles-tick"
              style="left: -1px;"
            >
              <p
                class="MuiTypography-root makeStyles-majorTickLabel MuiTypography-body1"
              >
                0
              </p>
            </div>
          </div>
          <div
            class="makeStyles-boundaryPaddingBlock"
            style="background: none; width: 800px;"
          />
        </div>
      </div>
      <p
        class="MuiTypography-root makeStyles-refLabel MuiTypography-body1"
        data-testid="refLabel-ctgA"
        style="left: -1px; padding-left: 1px; z-index: 1;"
      >
        ctgA
      </p>
    </div>
    <div
      class="makeStyles-spacer"
    />
    <div
      class="makeStyles-root"
    >
      <div
        class="MuiPaper-root makeStyles-trackLabel makeStyles-root MuiPaper-elevation1 MuiPaper-rounded"
      >
        <span
          aria-hidden="true"
          class="material-icons MuiIcon-root makeStyles-dragHandle MuiIcon-fontSizeSmall"
          data-testid="dragHandle-lgv-testConfig"
          draggable="true"
        >
          drag_indicator
        </span>
        <button
          class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton MuiIconButton-colorSecondary"
          tabindex="0"
          title="close this track"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
            >
              close
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <span
          class="MuiTypography-root makeStyles-trackName MuiTypography-body1"
        >
          Foo Track
        </span>
        <button
          aria-controls="simple-menu"
          aria-haspopup="true"
          class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton MuiIconButton-colorSecondary"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
            >
              more_vert
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="MuiPaper-root makeStyles-trackRenderingContainer MuiPaper-outlined MuiPaper-rounded"
        data-testid="trackRenderingContainer-lgv-testConfig"
        role="presentation"
        style="height: 20px;"
      >
        <div
          class="makeStyles-renderingComponentContainer"
          style="transform: scaleX(1);"
        >
          <div
            class="makeStyles-track"
            data-testid="track-testConfig"
            role="presentation"
          >
            <div
              class="makeStyles-trackBlocks"
              data-testid="Blockset"
              style="left: -800px;"
            >
              <div
                class="makeStyles-boundaryPaddingBlock"
                style="background: none; width: 800px;"
              />
              <div
                class="makeStyles-block"
                style="width: 100px;"
              >
                <div
                  class="ssr-container"
                  data-html-size="313"
                >
                  <div
                    classname="ssr-container-inner"
                  >
                    <div
                      class="PileupRendering"
                      style="position:relative;width:0;height:0"
                    >
                      <canvas
                        data-testid="prerendered_canvas"
                        height="0"
                        style="width:0;height:0;position:absolute;left:0;top:0"
                        width="0"
                      />
                      <canvas
                        class="highlightOverlayCanvas"
                        height="0"
                        style="position:absolute;left:0;top:0"
                        width="0"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-boundaryPaddingBlock"
                style="background: none; width: 800px;"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="makeStyles-overlay"
        style="height: 20px;"
      />
      <div
        class="makeStyles-horizontalHandle makeStyles-resizeHandle"
        role="presentation"
      />
    </div>
  </div>
</div>
`;

exports[`<LinearGenomeView /> renders setup wizard 1`] = `
<div
  class="MuiContainer-root makeStyles-importFormContainer MuiContainer-maxWidthLg"
>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
  >
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <div
        class="MuiFormControl-root MuiTextField-root makeStyles-importFormEntry MuiFormControl-marginNormal"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
          data-shrink="true"
        >
          Assembly
        </label>
        <div
          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl"
        >
          <div
            aria-haspopup="listbox"
            class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
            role="button"
            tabindex="0"
          >
            volMyt1
          </div>
          <input
            type="hidden"
            value="0"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          >
            <legend
              class="PrivateNotchedOutline-legendLabelled PrivateNotchedOutline-legendNotched"
            >
              <span>
                Assembly
              </span>
            </legend>
          </fieldset>
        </div>
        <p
          class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
        >
          Select assembly to view
        </p>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <div
        aria-expanded="false"
        class="MuiAutocomplete-root MuiAutocomplete-hasPopupIcon"
        role="combobox"
      >
        <div
          class="MuiFormControl-root MuiTextField-root makeStyles-importFormEntry MuiFormControl-marginNormal MuiFormControl-fullWidth"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
            data-shrink="true"
            for="refNameAutocomplete-lgv"
            id="refNameAutocomplete-lgv-label"
          >
            Sequence
          </label>
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiAutocomplete-inputRoot MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
          >
            <input
              aria-autocomplete="list"
              aria-describedby="refNameAutocomplete-lgv-helper-text"
              aria-invalid="false"
              autocapitalize="none"
              autocomplete="off"
              class="MuiInputBase-input MuiOutlinedInput-input MuiAutocomplete-input MuiAutocomplete-inputFocused MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
              id="refNameAutocomplete-lgv"
              spellcheck="false"
              type="text"
              value="ctgA"
            />
            <div
              class="MuiAutocomplete-endAdornment"
            >
              <button
                aria-label="Open"
                class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-popupIndicator"
                tabindex="-1"
                title="Open"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled PrivateNotchedOutline-legendNotched"
              >
                <span>
                  Sequence
                </span>
              </legend>
            </fieldset>
          </div>
          <p
            class="MuiFormHelperText-root MuiFormHelperText-contained MuiFormHelperText-filled"
            id="refNameAutocomplete-lgv-helper-text"
          >
            Select sequence to view
          </p>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Open
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`<LinearGenomeView /> renders two tracks, two regions 1`] = `
<div>
  <div
    class="makeStyles-scaleBar"
  >
    <div
      class="MuiPaper-root makeStyles-scaleBarContig MuiPaper-outlined MuiPaper-rounded"
      style="min-width: 800px;"
    >
      <p
        class="MuiTypography-root makeStyles-scaleBarRefName MuiTypography-body1"
      >
        ctgA
      </p>
      <div
        class="makeStyles-scaleBarVisibleRegion"
        style="width: 8000px; left: -1px;"
      />
      <div
        class="makeStyles-scaleBarLabel"
        style="left: 400px;"
      >
        5
      </div>
      <div
        class="makeStyles-scaleBarLabel"
        style="left: 800px;"
      >
        10
      </div>
    </div>
  </div>
  <div
    class="makeStyles-overview"
  >
    <svg
      class="makeStyles-overviewSvg"
      height="48"
      width="100%"
    >
      <polygon
        fill="rgba(121, 134, 203, 0.3)"
        points="0,48,100,48,8001,0,1,0"
        stroke="rgba(121, 134, 203, 0.8)"
      />
    </svg>
    <div
      class="makeStyles-headerBar"
    >
      <button
        class="MuiButtonBase-root MuiToggleButton-root makeStyles-toggleButton"
        color="secondary"
        tabindex="0"
        title="select tracks"
        type="button"
        value="track_select"
      >
        <span
          class="MuiToggleButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
          >
            line_style
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="makeStyles-spacer"
      />
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-panButton MuiButton-outlinedSizeSmall MuiButton-sizeSmall"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root"
          >
            arrow_back
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-panButton MuiButton-outlinedSizeSmall MuiButton-sizeSmall"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <span
            aria-hidden="true"
            class="material-icons MuiIcon-root"
          >
            arrow_forward
          </span>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        aria-expanded="false"
        class="MuiAutocomplete-root MuiAutocomplete-hasPopupIcon"
        role="combobox"
      >
        <div
          class="MuiFormControl-root MuiTextField-root makeStyles-headerRefName MuiFormControl-marginDense MuiFormControl-fullWidth"
        >
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiAutocomplete-inputRoot MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd MuiInputBase-marginDense MuiOutlinedInput-marginDense"
            style="padding-top: 2px; padding-bottom: 2px; background: rgba(255, 255, 255, 0.8);"
          >
            <input
              aria-autocomplete="list"
              aria-invalid="false"
              autocapitalize="none"
              autocomplete="off"
              class="MuiInputBase-input MuiOutlinedInput-input MuiAutocomplete-input MuiAutocomplete-inputFocused MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense"
              id="refNameAutocomplete-lgv"
              spellcheck="false"
              type="text"
              value=""
            />
            <div
              class="MuiAutocomplete-endAdornment"
            >
              <button
                aria-label="Open"
                class="MuiButtonBase-root MuiIconButton-root MuiAutocomplete-popupIndicator"
                tabindex="-1"
                title="Open"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7 10l5 5 5-5z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend"
                style="width: 0.01px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <form>
        <div
          class="MuiFormControl-root MuiTextField-root makeStyles-input MuiFormControl-marginDense"
          title="Disabled because this view is displaying multiple regions"
        >
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-disabled MuiOutlinedInput-disabled MuiInputBase-formControl MuiInputBase-adornedStart MuiOutlinedInput-adornedStart MuiInputBase-marginDense MuiOutlinedInput-marginDense"
            style="background: rgba(255, 255, 255, 0.8); height: 32px;"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
            >
              search
            </span>
            <input
              aria-invalid="false"
              class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-disabled MuiOutlinedInput-disabled MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense"
              disabled=""
              style="padding: 8px;"
              type="text"
              value="ctgA:1..100;ctgB:1001..1698"
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend"
                style="width: 0.01px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </form>
      <div
        class="makeStyles-bp"
      >
        <p
          class="MuiTypography-root makeStyles-bp MuiTypography-body2 MuiTypography-colorTextSecondary"
        >
          798 bp
        </p>
      </div>
      <div
        class="makeStyles-container"
      >
        <button
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary MuiIconButton-disabled MuiButtonBase-disabled"
          data-testid="zoom_out"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
            >
              zoom_out
            </span>
          </span>
        </button>
        <span
          class="MuiSlider-root MuiSlider-colorPrimary makeStyles-slider"
        >
          <span
            class="MuiSlider-rail"
          />
          <span
            class="MuiSlider-track"
            style="left: 0%; width: 0%;"
          />
          <input
            type="hidden"
            value="0"
          />
          <span
            class="MuiSlider-mark MuiSlider-markActive"
            data-index="0"
            style="left: 0%;"
          />
          <span
            class="MuiSlider-mark"
            data-index="1"
            style="left: 17.718382013555793%;"
          />
          <span
            class="MuiSlider-mark"
            data-index="2"
            style="left: 41.14080899322211%;"
          />
          <span
            class="MuiSlider-mark"
            data-index="3"
            style="left: 58.85919100677789%;"
          />
          <span
            class="MuiSlider-mark"
            data-index="4"
            style="left: 76.5775730203337%;"
          />
          <span
            class="MuiSlider-mark"
            data-index="5"
            style="left: 100%;"
          />
          <span
            aria-orientation="horizontal"
            aria-valuemax="5.643856189774724"
            aria-valuemin="0"
            aria-valuenow="0"
            class="MuiSlider-thumb MuiSlider-thumbColorPrimary"
            data-index="0"
            role="slider"
            style="left: 0%;"
            tabindex="0"
          />
        </span>
        <button
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorSecondary"
          data-testid="zoom_in"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
            >
              zoom_in
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="makeStyles-spacer"
      />
    </div>
  </div>
  <div
    class="makeStyles-tracksContainer"
    role="presentation"
  >
    <div
      class="makeStyles-verticalGuidesZoomContainer"
      style="transform: scaleX(1);"
    >
      <div
        class="makeStyles-verticalGuidesContainer"
        style="left: -800px; width: 2702px;"
      >
        <div
          class="makeStyles-boundaryPaddingBlock"
          style="width: 800px;"
        />
        <div
          class="makeStyles-block"
          style="width: 100px;"
        >
          <div
            class="makeStyles-tick makeStyles-majorTick"
            style="left: -1px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 19px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 39px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 59px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 79px;"
          />
          <div
            class="makeStyles-tick makeStyles-majorTick"
            style="left: 99px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 119px;"
          />
        </div>
        <div
          class="makeStyles-interRegionPaddingBlock"
          style="width: 2px;"
        />
        <div
          class="makeStyles-block"
          style="width: 800px;"
        >
          <div
            class="makeStyles-tick makeStyles-majorTick"
            style="left: -1px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 19px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 39px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 59px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 79px;"
          />
          <div
            class="makeStyles-tick makeStyles-majorTick"
            style="left: 99px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 119px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 139px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 159px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 179px;"
          />
          <div
            class="makeStyles-tick makeStyles-majorTick"
            style="left: 199px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 219px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 239px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 259px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 279px;"
          />
          <div
            class="makeStyles-tick makeStyles-majorTick"
            style="left: 299px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 319px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 339px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 359px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 379px;"
          />
          <div
            class="makeStyles-tick makeStyles-majorTick"
            style="left: 399px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 419px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 439px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 459px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 479px;"
          />
          <div
            class="makeStyles-tick makeStyles-majorTick"
            style="left: 499px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 519px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 539px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 559px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 579px;"
          />
          <div
            class="makeStyles-tick makeStyles-majorTick"
            style="left: 599px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 619px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 639px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 659px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 679px;"
          />
          <div
            class="makeStyles-tick makeStyles-majorTick"
            style="left: 699px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 719px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 739px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 759px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 779px;"
          />
          <div
            class="makeStyles-tick makeStyles-majorTick"
            style="left: 799px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 819px;"
          />
        </div>
        <div
          class="makeStyles-block"
          style="width: 200px;"
        >
          <div
            class="makeStyles-tick makeStyles-majorTick"
            style="left: -1px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 19px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 39px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 59px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 79px;"
          />
          <div
            class="makeStyles-tick makeStyles-majorTick"
            style="left: 99px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 119px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 139px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 159px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 179px;"
          />
          <div
            class="makeStyles-tick makeStyles-majorTick"
            style="left: 199px;"
          />
          <div
            class="makeStyles-tick makeStyles-minorTick"
            style="left: 219px;"
          />
        </div>
        <div
          class="makeStyles-boundaryPaddingBlock"
          style="width: 800px;"
        />
      </div>
    </div>
    <div
      class="makeStyles-rubberBand"
      style="left: 0px; width: 0px;"
    >
      <h6
        class="MuiTypography-root makeStyles-rubberBandText MuiTypography-h6"
      >
        0
         bp
         
      </h6>
    </div>
    <div
      class="makeStyles-guide"
      style="left: 0px;"
      title="1"
    />
    <div
      class="MuiPaper-root makeStyles-scaleBarContainer makeStyles-rubberBandControl MuiPaper-outlined MuiPaper-rounded"
      data-testid="rubberBand_controls"
      role="presentation"
      style="height: 17px; box-sizing: border-box;"
    >
      <div
        style="transform: scaleX(1);"
      >
        <div
          class="makeStyles-scaleBar"
          style="left: -801px; width: 2702px; height: 17px; box-sizing: border-box;"
        >
          <div
            class="makeStyles-boundaryPaddingBlock"
            style="background: none; width: 800px;"
          />
          <div
            class="makeStyles-block"
            style="width: 100px;"
          >
            <div
              class="makeStyles-tick"
              style="left: -1px;"
            >
              <p
                class="MuiTypography-root makeStyles-majorTickLabel MuiTypography-body1"
              >
                0
              </p>
            </div>
          </div>
          <div
            class="makeStyles-interRegionPaddingBlock"
            style="background: none; width: 2px;"
          />
          <div
            class="makeStyles-block"
            style="width: 800px;"
          >
            <div
              class="makeStyles-tick"
              style="left: -1px;"
            >
              <p
                class="MuiTypography-root makeStyles-majorTickLabel MuiTypography-body1"
              >
                1,000
              </p>
            </div>
            <div
              class="makeStyles-tick"
              style="left: 199px;"
            >
              <p
                class="MuiTypography-root makeStyles-majorTickLabel MuiTypography-body1"
              >
                1,200
              </p>
            </div>
            <div
              class="makeStyles-tick"
              style="left: 399px;"
            >
              <p
                class="MuiTypography-root makeStyles-majorTickLabel MuiTypography-body1"
              >
                1,400
              </p>
            </div>
            <div
              class="makeStyles-tick"
              style="left: 599px;"
            >
              <p
                class="MuiTypography-root makeStyles-majorTickLabel MuiTypography-body1"
              >
                1,600
              </p>
            </div>
            <div
              class="makeStyles-tick"
              style="left: 799px;"
            >
              <p
                class="MuiTypography-root makeStyles-majorTickLabel MuiTypography-body1"
              >
                1,800
              </p>
            </div>
          </div>
          <div
            class="makeStyles-block"
            style="width: 200px;"
          >
            <div
              class="makeStyles-tick"
              style="left: -1px;"
            >
              <p
                class="MuiTypography-root makeStyles-majorTickLabel MuiTypography-body1"
              >
                1,800
              </p>
            </div>
            <div
              class="makeStyles-tick"
              style="left: 199px;"
            >
              <p
                class="MuiTypography-root makeStyles-majorTickLabel MuiTypography-body1"
              >
                2,000
              </p>
            </div>
          </div>
          <div
            class="makeStyles-boundaryPaddingBlock"
            style="background: none; width: 800px;"
          />
        </div>
      </div>
      <p
        class="MuiTypography-root makeStyles-refLabel MuiTypography-body1"
        data-testid="refLabel-ctgA"
        style="left: -1px; padding-left: 1px; z-index: 1;"
      >
        ctgA
      </p>
      <p
        class="MuiTypography-root makeStyles-refLabel MuiTypography-body1"
        data-testid="refLabel-ctgB"
        style="left: 101px; padding-left: 1px; z-index: 3;"
      >
        ctgB
      </p>
    </div>
    <div
      class="makeStyles-spacer"
    />
    <div
      class="makeStyles-root"
    >
      <div
        class="MuiPaper-root makeStyles-trackLabel makeStyles-root MuiPaper-elevation1 MuiPaper-rounded"
      >
        <span
          aria-hidden="true"
          class="material-icons MuiIcon-root makeStyles-dragHandle MuiIcon-fontSizeSmall"
          data-testid="dragHandle-lgv-testConfig"
          draggable="true"
        >
          drag_indicator
        </span>
        <button
          class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton MuiIconButton-colorSecondary"
          tabindex="0"
          title="close this track"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
            >
              close
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <span
          class="MuiTypography-root makeStyles-trackName MuiTypography-body1"
        >
          Foo Track
        </span>
        <button
          aria-controls="simple-menu"
          aria-haspopup="true"
          class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton MuiIconButton-colorSecondary"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
            >
              more_vert
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="MuiPaper-root makeStyles-trackRenderingContainer MuiPaper-outlined MuiPaper-rounded"
        data-testid="trackRenderingContainer-lgv-testConfig"
        role="presentation"
        style="height: 20px;"
      >
        <div
          class="makeStyles-renderingComponentContainer"
          style="transform: scaleX(1);"
        >
          <div
            class="makeStyles-track"
            data-testid="track-testConfig"
            role="presentation"
          >
            <div
              class="makeStyles-trackBlocks"
              data-testid="Blockset"
              style="left: -800px;"
            >
              <div
                class="makeStyles-boundaryPaddingBlock"
                style="background: none; width: 800px;"
              />
              <div
                class="makeStyles-block"
                style="width: 100px;"
              >
                <div
                  class="ssr-container"
                  data-html-size="313"
                >
                  <div
                    classname="ssr-container-inner"
                  >
                    <div
                      class="PileupRendering"
                      style="position:relative;width:0;height:0"
                    >
                      <canvas
                        data-testid="prerendered_canvas"
                        height="0"
                        style="width:0;height:0;position:absolute;left:0;top:0"
                        width="0"
                      />
                      <canvas
                        class="highlightOverlayCanvas"
                        height="0"
                        style="position:absolute;left:0;top:0"
                        width="0"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-interRegionPaddingBlock"
                style="background: none; width: 2px;"
              />
              <div
                class="makeStyles-block"
                style="width: 800px;"
              >
                <div
                  class="ssr-container"
                  data-html-size="313"
                >
                  <div
                    classname="ssr-container-inner"
                  >
                    <div
                      class="PileupRendering"
                      style="position:relative;width:0;height:0"
                    >
                      <canvas
                        data-testid="prerendered_canvas"
                        height="0"
                        style="width:0;height:0;position:absolute;left:0;top:0"
                        width="0"
                      />
                      <canvas
                        class="highlightOverlayCanvas"
                        height="0"
                        style="position:absolute;left:0;top:0"
                        width="0"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-block"
                style="width: 200px;"
              >
                <div
                  class="ssr-container"
                  data-html-size="313"
                >
                  <div
                    classname="ssr-container-inner"
                  >
                    <div
                      class="PileupRendering"
                      style="position:relative;width:0;height:0"
                    >
                      <canvas
                        data-testid="prerendered_canvas"
                        height="0"
                        style="width:0;height:0;position:absolute;left:0;top:0"
                        width="0"
                      />
                      <canvas
                        class="highlightOverlayCanvas"
                        height="0"
                        style="position:absolute;left:0;top:0"
                        width="0"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-boundaryPaddingBlock"
                style="background: none; width: 800px;"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="makeStyles-overlay"
        style="height: 20px;"
      />
      <div
        class="makeStyles-horizontalHandle makeStyles-resizeHandle"
        role="presentation"
      />
    </div>
    <div
      class="makeStyles-root"
    >
      <div
        class="MuiPaper-root makeStyles-trackLabel makeStyles-root MuiPaper-elevation1 MuiPaper-rounded"
      >
        <span
          aria-hidden="true"
          class="material-icons MuiIcon-root makeStyles-dragHandle MuiIcon-fontSizeSmall"
          data-testid="dragHandle-lgv-testConfig2"
          draggable="true"
        >
          drag_indicator
        </span>
        <button
          class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton MuiIconButton-colorSecondary"
          tabindex="0"
          title="close this track"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
            >
              close
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <span
          class="MuiTypography-root makeStyles-trackName MuiTypography-body1"
        >
          Bar Track
        </span>
        <button
          aria-controls="simple-menu"
          aria-haspopup="true"
          class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton MuiIconButton-colorSecondary"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
            >
              more_vert
            </span>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="MuiPaper-root makeStyles-trackRenderingContainer MuiPaper-outlined MuiPaper-rounded"
        data-testid="trackRenderingContainer-lgv-testConfig2"
        role="presentation"
        style="height: 20px;"
      >
        <div
          class="makeStyles-renderingComponentContainer"
          style="transform: scaleX(1);"
        >
          <div
            class="makeStyles-track"
            data-testid="track-testConfig2"
            role="presentation"
          >
            <div
              class="makeStyles-trackBlocks"
              data-testid="Blockset"
              style="left: -800px;"
            >
              <div
                class="makeStyles-boundaryPaddingBlock"
                style="background: none; width: 800px;"
              />
              <div
                class="makeStyles-block"
                style="width: 100px;"
              >
                <div
                  class="ssr-container"
                  data-html-size="313"
                >
                  <div
                    classname="ssr-container-inner"
                  >
                    <div
                      class="PileupRendering"
                      style="position:relative;width:0;height:0"
                    >
                      <canvas
                        data-testid="prerendered_canvas"
                        height="0"
                        style="width:0;height:0;position:absolute;left:0;top:0"
                        width="0"
                      />
                      <canvas
                        class="highlightOverlayCanvas"
                        height="0"
                        style="position:absolute;left:0;top:0"
                        width="0"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-interRegionPaddingBlock"
                style="background: none; width: 2px;"
              />
              <div
                class="makeStyles-block"
                style="width: 800px;"
              >
                <div
                  class="ssr-container"
                  data-html-size="313"
                >
                  <div
                    classname="ssr-container-inner"
                  >
                    <div
                      class="PileupRendering"
                      style="position:relative;width:0;height:0"
                    >
                      <canvas
                        data-testid="prerendered_canvas"
                        height="0"
                        style="width:0;height:0;position:absolute;left:0;top:0"
                        width="0"
                      />
                      <canvas
                        class="highlightOverlayCanvas"
                        height="0"
                        style="position:absolute;left:0;top:0"
                        width="0"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-block"
                style="width: 200px;"
              >
                <div
                  class="ssr-container"
                  data-html-size="313"
                >
                  <div
                    classname="ssr-container-inner"
                  >
                    <div
                      class="PileupRendering"
                      style="position:relative;width:0;height:0"
                    >
                      <canvas
                        data-testid="prerendered_canvas"
                        height="0"
                        style="width:0;height:0;position:absolute;left:0;top:0"
                        width="0"
                      />
                      <canvas
                        class="highlightOverlayCanvas"
                        height="0"
                        style="position:absolute;left:0;top:0"
                        width="0"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-boundaryPaddingBlock"
                style="background: none; width: 800px;"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="makeStyles-overlay"
        style="height: 20px;"
      />
      <div
        class="makeStyles-horizontalHandle makeStyles-resizeHandle"
        role="presentation"
      />
    </div>
  </div>
</div>
`;
